--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <title>Aplic. Web de jQuery Mobile</title>
 <link href="js/jquery.mobile.theme-1.0.min.css" rel="stylesheet" type="text/css"/>
 <link href="js/jquery.mobile.structure-1.0.min.css" rel="stylesheet" type="text/css"/>
+
+<script src="phonegap.js"></script>
 <script src="js/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="js/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="js/actions.js" type="text/javascript"></script>
@@ -20,53 +22,61 @@
     	<form name="login">	
             <input type="text" id="nick" placeholder="Usuario" /><br>
             <input type="password" id="pass" placeholder="Contraseña" /><br>
-            <div class="Send">Enviar</div>
+            <button class="Send">Enviar</button>
         </form>
 	</div>
-	<div data-role="footer">
-		<h4>Pie de página</h4>
-	</div>
-</div>
 
-<div data-role="page" id="page2">
+</div>
+<div data-role="page" id="menu">
 	<div data-role="header">
-		<h1>Página dos</h1>
+		<h1>Menu Principal</h1>
 	</div>
 	<div data-role="content">	
 		<ul data-role="listview">
-			<li><a href="#page2">Página dos</a></li>
-            <li><a href="#page3">Página tres</a></li>
-			<li><a href="#page4">Página cuatro</a></li>
+			<li><a href="#reporte">Reporte</a></li>
+            <li><a href="#salir">Salir</a></li>
 		</ul>		
 	</div>
-	<div data-role="footer">
-		<h4>Pie de página</h4>
-	</div>
 </div>
 
-<div data-role="page" id="page3">
+<div data-role="page" id="reporte">
 	<div data-role="header">
-		<h1>Página tres</h1>
+		<h1>Reporte de Alumnos</h1>
 	</div>
 	<div data-role="content">	
-		Contenido		
+ <ul data-role="controlgroup" data-type="vertical" class="localnav">
+				<li class="btn v1"><a data-role="button">1 Vibraci&oacute;n</a></li>
+				<li class="btn v2"><a data-role="button">2 Vibraciones</a></li>
+			</ul>	
 	</div>
 	<div data-role="footer">
 		<h4>Pie de página</h4>
 	</div>
 </div>
 
-<div data-role="page" id="page4">
+<div data-role="page" id="alert">
 	<div data-role="header">
 		<h1>Página cuatro</h1>
 	</div>
 	<div data-role="content">	
-		Contenido		
+		<div id="right" style="width:100%; height:100px; background-color:#063;"></div>
 	</div>
 	<div data-role="footer">
 		<h4>Pie de página</h4>
 	</div>
 </div>
 
+<div data-role="page" id="confirm">
+	<div data-role="header">
+		<h1>Página cinco</h1>
+	</div>
+	<div data-role="content">	
+		<div id="left" style="width:100%; height:100px; background-color:#A03;"></div>
+	</div>
+	<div data-role="footer">
+		<h4>Pie de página</h4>
+	</div>
+</div>
+
+
 </body>
-</html>
