--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <input type="password" id="pass" placeholder="Contraseña" /><br>
             <button class="Send">Enviar</button>
         </form>
+        <a href="#reporte"> Click </a>
 	</div>
 
 </div>
@@ -40,18 +41,25 @@
 </div>
 
 <div data-role="page" id="reporte">
-	<div data-role="header">
-		<h1>Reporte de Alumnos</h1>
-	</div>
-	<div data-role="content">	
- <ul data-role="controlgroup" data-type="vertical" class="localnav">
-				<li class="btn v1"><a data-role="button">1 Vibraci&oacute;n</a></li>
-				<li class="btn v2"><a data-role="button">2 Vibraciones</a></li>
-			</ul>	
-	</div>
-	<div data-role="footer">
-		<h4>Pie de página</h4>
-	</div>
+    <div data-role="content">
+        <div style="width: 150px; height: 150px; position: relative; background-color: #fbfbfb; border: 1px solid #b8b8b8;">
+            <img src="http://codiqa.com/static/images/v2/image.png" alt="image" style="position: absolute; top: 50%; left: 50%; margin-left: -16px; margin-top: -18px">
+        </div>
+        <form action="">
+            <div data-role="fieldcontain">
+                <fieldset data-role="controlgroup">
+                    <label for="textinput2">
+                    </label>
+                    <input name="" id="textinput2" placeholder="Numero de Control" value=""
+                    type="text">
+                </fieldset>
+            </div>
+            <a data-role="button" data-inline="true" href="#page1" data-icon="search"
+            data-iconpos="left">
+                Consulta
+            </a>
+        </form>
+    </div>
 </div>
 
 <div data-role="page" id="alert">
