--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     	<form name="login">	
             <input type="text" id="nick" placeholder="Usuario" /><br>
             <input type="password" id="pass" placeholder="Contraseña" /><br>
-            <button class="Send">Enviar</button>
+            <button class="Send">Enviar_2</button>
         </form>
         <a href="#reporte"> Click </a>
 	</div>
