--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
                     </label>
                     <input name="" id="textinput2" placeholder="Numero de Control" value=""
                     type="text">
+                    
                 </fieldset>
             </div>
-            <a data-role="button" data-inline="true" href="#page1" data-icon="search"
+            <a data-role="button" data-inline="true" data-icon="search" class="Send"
             data-iconpos="left">
                 Consulta
             </a>
