--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div style="width: 150px; height: 150px; position: relative; background-color: #fbfbfb; border: 1px solid #b8b8b8;">
             <img src="http://codiqa.com/static/images/v2/image.png" alt="image" style="position: absolute; top: 50%; left: 50%; margin-left: -16px; margin-top: -18px">
         </div>
-        <form action="">
+        <form name="consulta">
             <div data-role="fieldcontain">
                 <fieldset data-role="controlgroup">
                     <label for="textinput2">
