--- a/index.html
+++ b/index.html
@@ -46,13 +46,11 @@
             <img src="http://codiqa.com/static/images/v2/image.png" alt="image" style="position: absolute; top: 50%; left: 50%; margin-left: -16px; margin-top: -18px">
         </div>
         <form name="consulta">
-            <div data-role="fieldcontain">
-                <fieldset data-role="controlgroup">
-                    <input name="" id="textinput2" placeholder="Numero de Control" value=""
+                    <input id="no_control" placeholder="Numero de Control" value=""
                     type="text">
                     
-                </fieldset>
-            </div>
+
+
             <a data-role="button" data-inline="true" data-icon="search" class="Send"
             data-iconpos="left">
                 Consulta
