--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     	<form name="login">	
             <input type="text" id="nick" placeholder="Usuario" /><br>
             <input type="password" id="pass" placeholder="Contraseña" /><br>
-            <button class="Send">Enviar</button>
+            <a data-role="button"  class="Send">
+                Enviar
+            </a>
         </form>
         <a href="#reporte"> Click </a>
 	</div>
@@ -57,6 +59,14 @@
             </a>
         </form>
     </div>
+<div>
+    <table>
+<tr><td class="desc">Nombre del Alumno:</td><td class="disp"></td></tr>
+<tr><td class="desc">Grupo:</td><td class="disp"></td></tr>
+<tr><td class="desc">Especialidad:</td><td class="disp"></td></tr>
+<tr><td class="desc">Reportes:</td><td class="disp"></td></tr>
+</table>
+</div>
 </div>
 
 <div data-role="page" id="alert">
