--- a/index.html
+++ b/index.html
@@ -59,13 +59,19 @@
             </a>
         </form>
     </div>
-<div>
-    <table>
+<div id="devic">
+<div class="toolbar">
+                    <h2>Alumno</h2>                    
+                </div>
+<div class="scroll">
+
+<table>
 <tr><td class="desc">Nombre del Alumno:</td><td class="disp"></td></tr>
 <tr><td class="desc">Grupo:</td><td class="disp"></td></tr>
 <tr><td class="desc">Especialidad:</td><td class="disp"></td></tr>
 <tr><td class="desc">Reportes:</td><td class="disp"></td></tr>
 </table>
+
 </div>
 </div>
 
